--- a/web/html/index.html
+++ b/web/html/index.html
@@ -6,6 +6,8 @@
     <title>game</title>
     <script src="../scripts/jquery.js"></script>
     <script src="../scripts/game.js"></script>
+    <script src="../scripts/chat.js"></script>
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 
 <body>
