--- a/web/index.html
+++ b/web/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>game</title>
-    <script src="../scripts/jquery.js"></script>
-    <script src="../scripts/game.js"></script>
-    <script src="../scripts/chat.js"></script>
-    <link rel="stylesheet" href="../styles/index.css">
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/game.js"></script>
+    <script src="scripts/chat.js"></script>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
@@ -23,13 +23,8 @@
     <span id=gameErrorBox></span>
 
     <div id='chatbox'>
-        <p id="log7" class="log">&nbsp;</p>
-        <p id="log6" class="log">&nbsp;</p>
-        <p id="log5" class="log">&nbsp;</p>
-        <p id="log4" class="log">&nbsp;</p>
-        <p id="log3" class="log">&nbsp;</p>
-        <p id="log2" class="log">&nbsp;</p>
-        <p id="log1" class="log">&nbsp;</p>
+        <div id='chatlog'>
+        </div>
         <input type="text" name="chat" id="textbox" placeholder="Hi there! Type here to talk to me." onfocus="">
     </div>
 
